# python-storage

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .repo-metadata.json  CHANGELOG.md  CODE_SUMMARY.md  CONTRIBUTING.rst  MANIFEST.in  README.rst  README_OPENTELEMETRY.rst  async_tasks_downloade_mp.py  check_env_vars.py  crc32_bench.py  file  fix_test.py  json_to_csv.py  main  move_blob_test.py  mypy.ini  noxfile.py  owlbot.py  parallel_uploader.py  poc_bidi_retry_final.py  pyproject.toml  pytest.ini  random_number.py  renovate.json  run_bidi_reads_integration_test.py  setup.py  synth.metadata  synth.py  test_asyncio_gc.py  test_bidi_reads.py  test_retry.py  threaded_downloader.py  tm_profiling_20230216-161132.csv  tm_profiling_20230216-161149.csv
.github/: .OwlBot.yaml  CODEOWNERS
.github/workflows/: unittest.yml
.kokoro/: build.sh  publish-docs.sh  release.sh
.kokoro/continuous/: common.cfg
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg
.kokoro/presubmit/: common.cfg  conftest_retry-3.8.cfg  system-2.7.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
.librarian/generator-input/: .repo-metadata.json  librarian.py
benchmarks/: async_tasks_downloader.py  download_one_object_using_n_streams.py  download_zb_m_proc_n_coro.py  download_zb_n_workers.py  download_zb_n_workers_same_client.py  find_crc.py  parallel_download_and_save.py  parallel_download_mp_mc.py  parallel_downloader.py  parallel_uploader.py  read_appendable_object.py  upload_large_objects.py  upload_zb_n_coros.py  upload_zb_n_coros_semphore.py  upload_zb_n_workers.py  upload_zb_one_coro.py
cloudbuild/: backup.yaml  micro_benchmarks.yaml  run_micro_benchmarks.sh  run_zonal_tests.sh  zb-system-tests-cloudbuild.yaml
docs/: acl_guide.rst  conf.py  generation_metageneration.rst  index.rst  retry_timeout.rst  snippets.py
docs/gapic/v1/: api.rst  types.rst
docs/storage/: retry_timeout.rst  snippets.py
google/cloud/: __init__.py  storage.py
google/cloud/storage/: __init__.py  __init__.pyi  _helpers.py  _http.py  _opentelemetry_meter.py  _opentelemetry_tracing.py  _signing.py  acl.py  batch.py  blob.py  bucket.py  client.py  constants.py  contexts.py  exceptions.py  fileio.py  grpc_client.py  hmac_key.py  ip_filter.py  notification.py  retry.py  temp.py  transfer_manager.py  version.py
google/cloud/storage_v1/: __init__.py  enums.py  storage_client.py  storage_client_config.py  types.py
google/cloud/storage_v2/: __init__.py
owl-bot-staging/v2/: .coveragerc  README.rst  noxfile.py  setup.py
owl-bot-staging/v2/docs/: conf.py  index.rst
owl-bot-staging/v2/scripts/: fixup_storage_v2_keywords.py
samples/: README.md
samples/generated_samples/: snippet_metadata_google.storage.v2.json
samples/snippets/: README.md  conftest.py  encryption_test.py  fileio_test.py  hmac_samples_test.py  notification_polling.py  notification_polling_test.py  notification_test.py  noxfile.py  noxfile_config.py  public_access_prevention_test.py  quickstart.py  quickstart_test.py  requester_pays_test.py  requirements-test.txt  requirements.txt  rpo_test.py  snippets_test.py  storage_async_download.py  storage_async_multirange_download.py  storage_async_multirange_download_test.py  storage_async_upload.py  storage_batch_request.py  storage_change_file_storage_class.py  storage_compose_file.py  storage_copy_file.py  storage_copy_file_archived_generation.py  storage_create_bucket_dual_region.py  storage_create_bucket_turbo_replication.py  storage_delete_file.py  storage_disable_requester_pays.py  storage_disable_soft_delete.py  storage_download_blob_as_chunks_concurrently.py  storage_download_file.py  storage_download_file_requester_pays.py  storage_download_into_memory.py  storage_download_to_stream.py  storage_enable_requester_pays.py  storage_fileio_pandas.py  storage_fileio_read_blob.py  (+48 more)
samples/snippets/experimental/: storage_async_download_ranges.py  storage_download_ranges_async.py
samples/snippets/rapid/: storage_create_and_write_appendable_object.py  storage_finalize_appendable_object_upload.py  (+6 more)
temp/: pyvenv.cfg
testing/: constraints-3.10.txt  constraints-3.12.txt  constraints-3.13.txt  constraints-3.7.txt  constraints-3.9.txt
tests/: conftest.py  system.py
tests/conformance/: _utils.py  bidi_reads_test.py  conftest.py  retry_conformance_testing.md  retry_strategy_test_data.json  test_bidi_reads.py  test_bidi_writes.py  test_conformance.py
tests/perf/: README.md  _perf_utils.py  bench-instance.sh  benchmarking.py  benchwrapper.py  output_benchmarks20230221-162052.csv  profile_transfer_manager.py  profile_w1r3.py
tests/system/: _helpers.py  conftest.py  open_with_read_handle.py  test__signing.py  test_blob.py  test_bucket.py  test_client.py  test_fileio.py  test_hmac_key_metadata.py  test_kms_integration.py  test_notification.py  test_packaging.py  test_system.py  test_transfer_manager.py  test_zonal.py
tests/unit/: retry_strategy_test_data.json  test__helpers.py  test__http.py  test__opentelemetry_meter.py  test__opentelemetry_tracing.py  test__signing.py  test_acl.py  test_async_grpc_client.py  test_batch.py  test_blob.py  test_bucket.py  test_client.py  test_fileio.py  test_grpc_client.py  test_hmac_key.py  test_ip_filter.py  test_notification.py  test_packaging.py  test_retry.py  test_transfer_manager.py  url_signer_v4_test_data.json
(+146 files in other folders)
