[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-storage"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
readme = "README.rst"
description = "Google Cloud Storage API client library"
classifiers = [
  # Should be one of:
  # "Development Status :: 3 - Alpha"
  # "Development Status :: 4 - Beta"
  # "Development Status :: 5 - Production/Stable"
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  "google-auth >= 2.26.1, < 3.0dev",
  "google-api-core >= 2.15.0, <3.0.0dev",
  "google-cloud-core >= 2.3.0, < 3.0dev",
  "google-resumable-media >= 2.7.2",
  "requests >= 2.18.0, < 3.0.0dev",
  "google-crc32c >= 1.0, < 2.0dev",
]
dynamic = ["version"]

[project.optional-dependencies]
protobuf = ["protobuf<6.0.0dev"]
tracing = ["opentelemetry-api >= 1.1.0"]

[tool.setuptools.dynamic]
version = { attr = "google.cloud.storage.version.__version__" }
