# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-storage"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
readme = "README.rst"
description = "Google Cloud Storage API client library"
classifiers = [
  # Should be one of:
  # "Development Status :: 3 - Alpha"
  # "Development Status :: 4 - Beta"
  # "Development Status :: 5 - Production/Stable"
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  "google-auth >= 2.26.1, < 3.0dev",
  "google-api-core >= 2.15.0, <3.0.0dev",
  "google-cloud-core >= 2.3.0, < 3.0dev",
  "google-resumable-media >= 2.7.2",
  "requests >= 2.18.0, < 3.0.0dev",
  "google-crc32c >= 1.0, < 2.0dev",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/googleapis/python-storage"

[project.optional-dependencies]
protobuf = ["protobuf < 6.0.0dev"]
tracing = ["opentelemetry-api >= 1.1.0"]

[tool.setuptools.dynamic]
version = { attr = "google.cloud.storage.version.__version__" }

[tool.setuptools.packages.find]
# Only include packages under the 'google' namespace. Do not include tests,
# benchmarks, etc.
include = ["google*"]
